# py-perf-compare

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cpython  Dockerfile.pypy  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-pypy.txt  run_benchmarks.py  setup.py
benchmarks/: __init__.py  performance_runner.py  result_aggregator.py  results_processor.py
docker/: Dockerfile.base  Dockerfile.controller  Dockerfile.cpython  Dockerfile.pypy
src/: __init__.py  cpu_test.py  cython_cpu_test.pyx  cython_memory_test.pyx  cython_mixed_test.pyx  memory_test.py  mixed_test.py  pypy_cpu_test.py  pypy_memory_test.py  pypy_mixed_test.py
src/numpy/: __init__.py  cpu_test_cython.pyx  cpu_test_numpy.py  memory_test_cython.pyx  memory_test_python.py
src/pure/: __init__.py  cpu_test_cython.pyx  cpu_test_python.py  memory_test_cython.pyx  memory_test_python.py  mixed_test_cython.pyx  mixed_test_python.py
