[build-system]
requires = ["hatchling", "wheel", "cython", "numpy", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "python-performance-tests"
version = "0.1.0"
description = "Comprehensive Python Performance Comparison Project"
readme = "README.md"
requires-python = "~=3.11"

dependencies = [
    "numpy>=1.24.3",
    "cython>=3.0.5",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.5",
    "matplotlib>=3.7.1",
    "nuitka>=1.7.10"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.cython-compiler]
include-path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3